--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -5,7 +5,6 @@
   position: relative;
   overflow: hidden;
 
-  background-image: linear-gradient(to bottom right, #1a1a1a, #14532d, #064e3b);
 
   display: flex;
   align-items: center;
@@ -13,7 +12,7 @@
 
   .wrapper {
     min-height: 100vh;
-    max-width: 124rem;
+    // max-width: 124rem;
     width: 100%;
   }
 }
