--- a/client/src/components/UI/mui/Buttons/AuthButton/AuthButton.scss
+++ b/client/src/components/UI/mui/Buttons/AuthButton/AuthButton.scss
@@ -1,10 +1,10 @@
-@import '../../../../../index.scss';
+@import '../../../../../variables/globalVariables.scss';
 
 .auth_button.MuiButtonBase-root {
   width: 100%;
   padding: 0.5rem;
   color: $WHITE;
-  background-color: rgba($DARK_SECONDARY_GREEN, 0.6);
+  background-color: rgba($MINT, 0.6);
   border-radius: 0.5rem;
   font-weight: 600;
   text-transform: none;
@@ -12,11 +12,11 @@
   transition: 0.3s ease;
 
   &:hover {
-    background-color: rgba($DARK_SECONDARY_GREEN, 1);
+    background-color: rgba($MINT, 1);
   }
 
   &:active {
     background-color: rgba($DARK_PRIMAL_GREY, 0.6);
-    color: $DARK_SECONDARY_GREEN;
+    color: $MINT;
   }
 }
