--- a/client/src/components/UI/mui/Inputs/NoteTableInput/NoteTableInput.scss
+++ b/client/src/components/UI/mui/Inputs/NoteTableInput/NoteTableInput.scss
@@ -49,7 +49,7 @@
         }
       }
 
-      .show_button {
+      .button {
         color: rgba($ERROR, 0.6);
 
         &:hover {
@@ -77,14 +77,8 @@
       .input_item {
         color: $MINT;
 
-        &.password {
-          input {
-            color: $MINT;
-          }
-        }
-
         input {
-          color: $WHITE;
+          color: rgba($BLACK, 0.8) !important;
 
           &::placeholder {
             color: $MINT;
@@ -92,7 +86,7 @@
         }
       }
 
-      .show_button {
+      .button {
         color: rgba($MINT, 0.6);
 
         &:hover {
@@ -109,7 +103,7 @@
         display: flex;
         align-items: center;
         padding: 0.5rem;
-        color: inherit;
+        // color: inherit;
 
         &::placeholder {
           color: $DARK_PRIMAL_GREY;
@@ -119,7 +113,7 @@
     }
   }
 
-  .show_button {
+  .button {
     color: $DARK_PRIMAL_GREY;
     padding: 0.25rem;
     margin-right: 0.25rem;
