--- a/client/src/pages/ErrorPage/ErrorPageNotFound.scss
+++ b/client/src/pages/ErrorPage/ErrorPageNotFound.scss
@@ -1,10 +1,12 @@
-@import '../../index.scss';
+@import '../../variables/globalVariables.scss';
 
 .error_wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-image: linear-gradient(to bottom right, #1a1a1a, #14532d, #064e3b);
+
   width: 100%;
   height: 100vh;
 
@@ -16,7 +18,7 @@
     gap: 1rem;
     padding: 1.5rem;
     border-radius: 1.5rem;
-    background-color: rgba($DARK_PRIMAL_GREEN, 0.5);
+    background-color: rgba($DARK_PRIMAL_BLUE, 0.5);
     color: $WHITE;
 
     h1 {
@@ -24,10 +26,10 @@
 
       background: linear-gradient(
         to right,
-        rgba($DARK_SECONDARY_GREEN, 0.5) 20%,
-        $DARK_SECONDARY_GREEN 40%,
-        $DARK_SECONDARY_GREEN 60%,
-        rgba($DARK_SECONDARY_GREEN, 0.5) 80%
+        rgba($MINT, 0.5) 20%,
+        $MINT 40%,
+        $MINT 60%,
+        rgba($MINT, 0.5) 80%
       );
       background-size: 200% auto;
       font-size: 8rem;
@@ -45,8 +47,8 @@
       }
     }
 
-    span{
-        font-size: 1.25rem;
+    span {
+      font-size: 1.25rem;
     }
   }
 }
