--- a/client/src/components/UI/mui/Inputs/AuthInput/AuthInput.scss
+++ b/client/src/components/UI/mui/Inputs/AuthInput/AuthInput.scss
@@ -84,7 +84,7 @@
         }
 
         input {
-          color: $WHITE;
+          color: rgba($WHITE, 0.8) !important;
 
           &::placeholder {
             color: $MINT;
